--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 .Login {
     width: 100%;
-    height: 350px;
-    margin-top: 50%;
+    height: 300px;
+    margin-top: 30%;
 
     display: flex;
     flex-direction: column;
@@ -43,6 +43,11 @@
 
     background-color: #E7E7E7;
     border-radius: 9px;
+    cursor: pointer;
+}
+
+.Login .Button:hover {
+    opacity: 0.8;
 }
 
 .Body {
